@@ -31,6 +31,7 @@ Release:    v2014012405
 - Error message now shown if ajax request to get submissions times out 
 - Improved CSS to scope only to plugins and files added to jQuery plugin organisation
 - Forum posts are now submitted to Turnitin when posted
+- Database dump added to PP settings page
 - Code changes as required by Moodlerooms to better fit Moodle guidelines
 - Fixes:
 	> User could submit to Turnitin Assignment without accepting Moodle disclaimer
